{
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Player",
            "id": "fc8bc60a-8658-4bc4-99e8-3c109627f8a8",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "cbc0bcf9-4cd2-4a3f-b12f-d523d3b3b4d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnClick",
                    "type": "Button",
                    "id": "98bbb163-df51-445e-b4e8-8a00e5d5d0a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "275820eb-5a19-44cb-8c07-16114395616b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27b66cc5-007f-4688-88ff-867b623fc7fd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d4a2ff3-1bdd-4554-b4a0-3663282f204d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a56a1657-faf0-4e0f-9336-d277f7518d47",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}